[package]
name = "sandbox_game"
version = "0.1.0"
edition = "2021"

[lib]
name = "sandbox_engine"
path = "./engine/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_pixel_buffer = "0.6.0"
array2d = "0.3.0"
rand = "0.8.5"